[metadata]
name = django-todo
version = 2.5.0
description = A multi-user, multi-group task management and assignment system for Django.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://django-todo.org
author = Scot Hacker
author_email = shacker@birdhouse.org
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 4.0
    factory-boy
    titlecase
    bleach
    django-autocomplete-light
    html2text
